settings.showNotes option added to enable/disable site-notes easily

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<site-notes></site-notes>
+<site-notes ng-if="settings.showNotes"></site-notes>
 <simple-summary-stats></simple-summary-stats>
 <!-- summary-stats></summary-stats -->
 
